# TPMS-Analysis-Alladio-Lorenzi

./: README.md  TPMSsolidGenerator.cpp  Tpms.h  gyroid_laminarflow.m  laminare_angelica
50porResults/: gyroid_laminarflow.m  gyroid_parameters_computation.m
GeometryBuilding/: .gitignore  CMakeLists.txt  Definition.h  README.md  TPMSsheetGenerator.cpp  Tpms.cpp  Tpms.h  Utils.cpp  Utils.h  mainTPMS.cpp
Gyroid50por_qw/: Allclean  Allrun  Allrun-dp  Allrun-scalar  Allrun-simple  Allrun_post  changeAMI.py  computeRe.py  findInsidePoint.py  getResult.py  gradP.py
Gyroid50por_qw/0/: p
Gyroid50por_qw/0.Tw/: T
Gyroid50por_qw/0.dp/: p
Gyroid50por_qw/0.orig/: T  U
Gyroid50por_qw/0.qw/: T
Gyroid50por_qw/constant/: fvOptions  transportProperties  turbulenceProperties
Gyroid50por_qw/constant/polyMesh/: boundary  cellLevel  level0Edge  pointLevel  surfaceIndex
Gyroid50por_qw/system/: Tbulk1  Tbulk2  Tw  blockMeshDict  controlDict  controlDictPost  controlDictScalar  createPatchDict  createPatchDictCyclic  decomposeParDict  fvSchemes  fvSolution  infoTPMS  meshQualityDict  snappyHexMeshDict
